"Implementadas las cuatro funcionalidades. Subo código"

--- a/blog.html
+++ b/blog.html
@@ -44,35 +44,35 @@
                 <ul class="main__community__form-list">
                     <li class="main__community__form-item">
                         <label for="dni"><i class="icon fa-solid fa-id-card"></i></label>
-                        <input type="text" id="dni" name="dni" placeholder="NIF/DNI" required>
+                        <input type="text" id="dni" name="dni" placeholder="NIF/DNI">
                     </li>
                     <li class="main__community__form-item">
                         <label for="first-name"><i class="icon fa-solid fa-user"></i></label>
-                        <input type="text" id="first-name" name="first-name" placeholder="Nombre" required>
+                        <input type="text" id="first-name" name="first-name" placeholder="Nombre">
                     </li>
                     <li class="main__community__form-item">
                         <label for="last-name"><i class="icon fa-solid fa-signature"></i></label>
-                        <input type="text" id="last-name" name="last-name" placeholder="Apellidos" required>
+                        <input type="text" id="last-name" name="last-name" placeholder="Apellidos">
                     </li>
                     <li class="main__community__form-item">
                         <label for="address"><i class="icon fa-solid fa-location-dot"></i></label>
-                        <input type="text" id="address" name="address" placeholder="Dirección" required>
+                        <input type="text" id="address" name="address" placeholder="Dirección">
                     </li>
                     <li class="main__community__form-item">
                         <label for="postal-code"><i class="icon fa-solid fa-envelopes-bulk"></i></label>
-                        <input type="text" id="postal-code" name="postal-code" placeholder="Código postal" required>
+                        <input type="text" id="postal-code" name="postal-code" placeholder="Código postal">
                     </li>
                     <li class="main__community__form-item">
                         <label for="locality"><i class="icon fa-solid fa-city"></i></label>
-                        <input type="text" id="locality" name="locality" placeholder="Localidad" required>
+                        <input type="text" id="locality" name="locality" placeholder="Localidad">
                     </li>
                     <li class="main__community__form-item">
                         <label for="country"><i class="icon fa-solid fa-globe"></i></label>
-                        <input type="text" id="country" name="country" placeholder="País" required>
+                        <input type="text" id="country" name="country" placeholder="País">
                     </li>
                     <li class="main__community__form-item">
                         <label for="email"><i class="icon fa-solid fa-envelope"></i></label>
-                        <input type="email" id="email" name="email" placeholder="Dirección e-mail" required>
+                        <input type="email" id="email" name="email" placeholder="Dirección e-mail">
                     </li>
                     <li class="main__community__form-item full-width">
                         <div id="form-message" class="form-message"></div>
